force-app/src/objects/TR1__Power_Notes_Template__c.object
<CustomObject>
    <description>Templates for Power Notes</description>
    <fields>
        <fullName>TR1__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if the Template is selected by default. If multiple templates are marked as default, the last modified record is used as default one.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Power_Notes_Subject__c</fullName>
        <inlineHelpText>Relation to a parent Subject</inlineHelpText>
        <label>Power Notes Subject</label>
        <referenceTo>TR1__Power_Notes_Subject__c</referenceTo>
        <relationshipLabel>Power Notes Templates</relationshipLabel>
        <relationshipName>Power_Notes_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Template_Content__c</fullName>
        <inlineHelpText>Template content populated on the record select</inlineHelpText>
        <label>Template Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Template__c</fullName>
        <inlineHelpText>Label for record in the Templates pulldown on Power Notes Creation page</inlineHelpText>
        <label>Template</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Power Notes Template</label>
    <nameField>
        <displayFormat>PNT-{0000}</displayFormat>
        <label>Power Notes Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Power Notes Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>